--- a/index.html
+++ b/index.html
@@ -4,12 +4,24 @@
 <head>
   <meta charset="utf-8">
   <title>Adi Persnal Site</title>
+
+  <style>
+
+  body {
+  background-color: #RAF6F6;;
+  }
+
+  hr {
+    background-color: white;
+  }
+
+  </style>
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td> <img src="IMG/Profile pic.png" alt="Adi profile picture"></td>
+      <td> <img src="IMG/Profile pic.png" width="250" height="250" alt="Adi profile picture"></td>
       <td>
         <h1>Adi lombrozo</h1>
         <p><em>Founder and CTO of <strong><a href="https://www.appbrewery.co/">The App Brewery</a></strong>.</em></p>
